--- a/index.html
+++ b/index.html
@@ -134,15 +134,38 @@
 <script>
     const extractVideoId = (input) => {
      const idPattern = /^[a-zA-Z0-9_-]{11}$/;
+     if (!input) return null;
      if (idPattern.test(input)) return input;
      try {
-       const url = new URL(input);
-       if (url.hostname.includes('youtube.com')) {
-         if (url.searchParams.get('v')) return url.searchParams.get('v');
-         if (url.pathname.startsWith('/shorts/')) return url.pathname.split('/')[2];
+       let candidate = input.trim();
+       if (!/^[a-zA-Z][a-zA-Z0-9+.-]*:\/\//.test(candidate)) {
+         candidate = 'https://' + candidate;
        }
-       if (url.hostname.includes('youtu.be')) return url.pathname.slice(1);
-     } catch {}
+       const url = new URL(candidate);
+       const hostname = url.hostname.toLowerCase();
+       const vParam = url.searchParams.get('v') || url.searchParams.get('vi') || url.searchParams.get('video_id');
+       if (vParam && idPattern.test(vParam)) return vParam;
+       if (url.hash) {
+         const hashParams = new URLSearchParams(url.hash.replace(/^#/, ''));
+         const hv = hashParams.get('v') || hashParams.get('vi');
+         if (hv && idPattern.test(hv)) return hv;
+       }
+       if (hostname.endsWith('youtu.be')) {
+         const seg = url.pathname.split('/').filter(Boolean)[0];
+         if (seg && idPattern.test(seg)) return seg;
+       }
+       if (hostname.includes('youtube') || hostname.includes('yout-ube')) {
+         const parts = url.pathname.split('/').filter(Boolean);
+         for (let i = 0; i < parts.length; i++) {
+           const p = parts[i].toLowerCase();
+           if ((p === 'embed' || p === 'v' || p === 'shorts' || p === 'watch') && parts[i + 1] && idPattern.test(parts[i + 1])) {
+             return parts[i + 1];
+           }
+         }
+       }
+       const m = input.match(/([a-zA-Z0-9_-]{11})/);
+       if (m) return m[1];
+     } catch (e) {}
      return null;
     };
 
@@ -185,7 +208,7 @@
         <div id="topBar">
             <input id="videoInput" placeholder="YouTubeの動画ID または URL" type="text" value="${videoId}"> <button id="playBtn">再生<\/button> <input id="searchInput" placeholder="検索キーワード" type="text"> <button id="searchBtn">検索<\/button>
         <\/div>
-    <iframe id="playerFrame" src="https://www.youtube-nocookie.com/embed/${videoId}?autoplay=1&controls=1&modestbranding=1&rel=0&fs=1" allow="autoplay; fullscreen" allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe id="playerFrame" src="https://www.youtube-nocookie.com/embed/${videoId}?playlist=${videoId}&autoplay=1&iv_load_policy=3&loop=1&start=" allow="autoplay; fullscreen" allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
     <\/div>
     <script>
 		    const frame = document.getElementById('playerFrame');
@@ -195,15 +218,38 @@
 			});
             const extractVideoId = (input) => {
             const idPattern = /^[a-zA-Z0-9_-]{11}$/;
+            if (!input) return null;
             if (idPattern.test(input)) return input;
             try {
-              const url = new URL(input);
-              if (url.hostname.includes('youtube.com')) {
-                if (url.searchParams.get('v')) return url.searchParams.get('v');
-                if (url.pathname.startsWith('/shorts/')) return url.pathname.split('/')[2];
+              let candidate = input.trim();
+              if (!/^[a-zA-Z][a-zA-Z0-9+.-]*:\/\//.test(candidate)) {
+                candidate = 'https://' + candidate;
               }
-              if (url.hostname.includes('youtu.be')) return url.pathname.slice(1);
-            } catch {}
+              const url = new URL(candidate);
+              const hostname = url.hostname.toLowerCase();
+              const vParam = url.searchParams.get('v') || url.searchParams.get('vi') || url.searchParams.get('video_id');
+              if (vParam && idPattern.test(vParam)) return vParam;
+              if (url.hash) {
+                const hashParams = new URLSearchParams(url.hash.replace(/^#/, ''));
+                const hv = hashParams.get('v') || hashParams.get('vi');
+                if (hv && idPattern.test(hv)) return hv;
+              }
+              if (hostname.endsWith('youtu.be')) {
+                const seg = url.pathname.split('/').filter(Boolean)[0];
+                if (seg && idPattern.test(seg)) return seg;
+              }
+              if (hostname.includes('youtube') || hostname.includes('yout-ube')) {
+                const parts = url.pathname.split('/').filter(Boolean);
+                for (let i = 0; i < parts.length; i++) {
+                  const p = parts[i].toLowerCase();
+                  if ((p === 'embed' || p === 'v' || p === 'shorts' || p === 'watch') && parts[i + 1] && idPattern.test(parts[i + 1])) {
+                    return parts[i + 1];
+                  }
+                }
+              }
+              const m = input.match(/([a-zA-Z0-9_-]{11})/);
+              if (m) return m[1];
+            } catch (e) {}
             return null;
           };
           const openSearch = ${openSearch.toString()};
@@ -212,7 +258,7 @@
             const vid = extractVideoId(val);
             if (vid) {
               document.getElementById('playerFrame').src =
-                "https://www.youtube-nocookie.com/embed/" + vid + "?autoplay=1&controls=1&modestbranding=1&rel=0&fs=1";
+                "https://www.youtube-nocookie.com/embed/" + vid + "?playlist=" + vid + "&autoplay=1&iv_load_policy=3&loop=1&start=";
             } else {
               openSearch(val);
             }
